api - update username
